# fisbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_COOLIFY.md  prompt  pyproject.toml
.claude/: settings.local.json
fisbot/: config.py  dashboard_events.py  dashboard_store.py  gemini_client.py  handlers.py  image_utils.py  main.py  ollama_client.py  parser.py  pipeline.py  prompt.py  sheets.py  storage.py  web.py
tests/: test_v2.py
