[project]
name = "fisbot"
version = "0.1.0"
description = "Telegram bot for Turkish receipt parsing using Google Gemini"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "google-generativeai>=0.8",
    "httpx>=0.27",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[tool.setuptools]
packages = ["fisbot"]

[project.scripts]
fisbot = "fisbot.main:main"
